syntax = "proto3";

option csharp_namespace = "BlogClientApi";

package BlogApi;

service PostService {
  rpc CreatePost (CreatePostRequest) returns (Post);
  rpc UpdatePost (UpdatePostRequest) returns (Post);
  rpc GetPost (GetPostRequest) returns (GetPostResponse);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
}

message Post {
  int32 id = 1;
  string title = 2;
  string body = 3;
  int32 userId = 4;
  repeated Comment comments = 5;
}

message Comment {
  int32 id = 1;
  int32 postId = 2;
  int32 userId = 3;
  string content = 4;
  Post post = 5;
}

message CreatePostRequest {
  string title = 1;
  string body = 2;
  int32 userId = 4;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string body = 3;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
}

message ListPostsResponse {
  repeated Post posts = 1;
}

message DeletePostRequest {
  int32 postId = 1;
}

message DeletePostResponse {
  string message = 1;
}

message CreateCommentRequest {
  int32 postId = 1;
  int32 userId = 2;
  string content = 3;
}

message CreateCommentResponse {
  int32 commentId = 1;
}
